--- a/ft-server-ui/ui/src/modules/feature-toggle/components/feature-toggle/feature-toggle.component.html
+++ b/ft-server-ui/ui/src/modules/feature-toggle/components/feature-toggle/feature-toggle.component.html
@@ -14,6 +14,10 @@
 
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> ID </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
 
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name </th>
